# poetry-plugin-pyenv

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
poetry_plugin_pyenv/: plugin.py  pyenv.py
tests/test_pytest/: test_ensure_installed.py  test_get_local_version.py  test_get_remote_versions.py  test_install.py  test_is_installed.py  test_set_local_version.py
tests/test_pytest/test_get_remote_versions/: pyenv_install_l.txt
tests/test_pytest/test_is_installed/: pyenv_versions_bare.txt
